# IFAEPlotter

./: CMakeLists.txt  ChangeLog  README  README.md  test.txt
IFAEPlotter/: FileKeyAttributes.h  PlotManager.h  PlotUtils.h  Plotter_Options.h  SampleAttributes.h  StyleDictionary.h  SystematicsAttributes.h  VariableAttributes.h
Root/: FileKeyAttributes.cxx  LinkDef.h  PlotManager.cxx  PlotUtils.cxx  Plotter_Options.cxx  SampleAttributes.cxx  StyleDictionary.cxx  SystematicsAttributes.cxx  VariableAttributes.cxx
cmt/: Makefile.RootCore
ex_configs/: IFP_style_lib_sigbkgd.txt  IFP_style_lib_stacks.txt  VLQ_file_list.txt  VLQ_sample_config.txt  VLQ_variable_config.txt  makeVLQPlots.sh
farooque/IFAEPlotter/: PlotUtils.h  VariableAttributes.h
farooque/share/: test_sample_config.txt  test_style_config.txt
python/: createHtmlOverview.py  run_merging.sh~
share/: IFP_style_lib_ext.txt  IFP_style_lib_ext.txt~  IFP_style_lib_lines.txt  IFP_style_lib_stacks.txt  README  runClusterDists.sh  runTest.sh  test_filelist.txt  test_sample_config.txt  test_style_config.txt  test_variable_config.txt
tutorials/data_mc_plots/: DATA_MC_file_list_2017-04-20_hbsm_june2017_vfcnc.txt  IFP_style_lib_stacks.txt  Shape_DataMC_sample_config_june2017_vfcnc.txt  Variable_config_hbsm_2017-06-28_datamc_fcnc.txt  makePlots_DataMC_june2017_vfcnc.sh
tutorials/mc_to_mc_plots/: FCNC_SHAPE_variable_config.txt  IFP_shape_style_lib_lines.txt  (+3 more)
util/: MakeConfigFile_VLQ_sigbkgd.cxx  MakeSigBkgdYields_VLQ.cxx  makeConfigurationFiles_SUSY.cxx  makeConfigurationFiles_TTH.cxx  makeNameTransformation.cxx  makeSystematicsPlots.cxx  makeVariableConfiguration_VLQ.cxx  plot.cxx  runPlots.cxx
(+25 files in other folders)
